[gd_scene load_steps=3 format=3 uid="uid://b1ghrb57pe5xi"]

[ext_resource type="Script" path="res://scripts/player/bullet.gd" id="1_yvxun"]

[sub_resource type="CircleShape2D" id="CircleShape2D_uwrpy"]
radius = 4.0

[node name="Bullet" type="Area2D"]
z_index = -1
collision_layer = 8
collision_mask = 65
script = ExtResource("1_yvxun")

[node name="BulletSprite" type="Sprite2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_uwrpy")

[node name="Timeout" type="Timer" parent="."]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="Timeout" to="." method="_on_timeout_timeout"]
